# GiochinoQT

./: CMakeLists.txt  Giochiamo.pro  anagrampage.cpp  anagrampage.h  game2048page.cpp  game2048page.h  hangmanpage.cpp  hangmanpage.h  homepage.cpp  homepage.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryconfigpage.cpp  memoryconfigpage.h  memorypage.cpp  memorypage.h  minespage.cpp  minespage.h  optionspage.cpp  optionspage.h  resources.qrc  secondpage.cpp  secondpage.h  snakepage.cpp  snakepage.h  sudokupage.cpp  sudokupage.h  thememanager.cpp  thememanager.h  words.h
.github/workflows/: Giochiamo-windows.yml  blank.yml
